--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h3>这是一个HTML文件。</h3s>
+    <h3>这是一个HTML文件。xiugaiindex</h3>
 </body>
 </html>
