--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<p>this is test user</p>
+	<p>this is test user</p>
     <h3>这是一个HTML文件。version 1.0 这是version1.01</h3>
 </body>
 </html>
